@@ -195,7 +195,6 @@ enum guCommandIds {
     ID_PLAYER_PLAYLIST_SELECT_ALBUM,
     ID_PLAYER_PLAYLIST_SELECT_GENRE,
     ID_PLAYER_PLAYLIST_SELECT_YEAR,
-    ID_PLAYER_PLAYLIST_NEXT_ALBUM,
     //
     ID_RADIO_PLAY,
     ID_RADIO_ENQUEUE,
@@ -220,6 +219,8 @@ enum guCommandIds {
     ID_PLAYERPANEL_STOP,
     ID_PLAYERPANEL_NEXTTRACK,
     ID_PLAYERPANEL_PREVTRACK,
+    ID_PLAYERPANEL_NEXTALBUM,
+    ID_PLAYERPANEL_PREVALBUM,
     ID_PLAYERPANEL_UPDATERADIOTRACK,
     ID_PLAYERPANEL_TRACKCHANGED,
     ID_PLAYERPANEL_CAPSCHANGED,
